--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
 composeBom = "2023.08.00"
+material3 = "1.3.0"
 #necessary dependencies versions
 kotlin-plugin = "1.8.22"
 ksp = "1.9.10-1.0.13"
@@ -35,7 +36,7 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 #necessary dependencies libraries
 datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStore-preferences" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
